--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -8,7 +8,8 @@
 
 	<table>
 		<tr><th>이름</th><th>전화번호</th></tr>
-		<tr><td>박형권</td><td>010-4212-3226</td></tr>
+		<tr><td>박형권</td><td>010-4212-32216</td></tr>
+		<tr><td>강화백</td><td>010-</td></tr>
 	</table>
 
 </body>
