--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -10,6 +10,7 @@
 		<tr><th>이름</th><th>전화번호</th></tr>
 		<tr><td>박형권</td><td>010-4212-32216</td></tr>
 		<tr><td>강화백</td><td>010-</td></tr>
+		<tr><td>금동민</td><td>010-9982-6965</td></tr>
 	</table>
 
 </body>
