--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -11,6 +11,7 @@
 		<tr><td>박형권</td><td>010-4212-32216</td></tr>
 		<tr><td>강화백</td><td>010-</td></tr>
 		<tr><td>금동민</td><td>010-9982-6965</td></tr>
+		<tr><td>김근택</td><td>010-2996-3806</td></tr>
 	</table>
 
 </body>
